Add Windows .exe packaging via Launch4j
Tracks the launch4j config (paths relative to itself, so it works
from any checkout) and the app icon, and documents the jar/jlink/
launch4j build steps in the README. The actual jar/exe/bundled
runtime stay under out/, which is still gitignored.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>